--- a/exercícios/ex026/mq005/estilos/style.css
+++ b/exercícios/ex026/mq005/estilos/style.css
@@ -7,7 +7,7 @@
 }
 
 html, body{
-    background-color: lightcyan;
+    background-color: rgb(166, 248, 248);
 }
 
 header{
@@ -19,18 +19,28 @@ h1{
     padding: 20px;
 }
 
+span#burguer{
+    background-color: darkcyan;
+    display: block;
+    text-align: center;
+    padding: 8px;
+    color: white;
+}
+
+span#burguer:hover{
+    cursor: pointer;
+    color: black;
+    background-color: rgb(67, 218, 218);
+}
+
 menu{
     text-align: center;
-    display: block;
+    display: none;
     background-color: darkcyan;
 }
 
 ul{
     list-style-type: none;
-}
-
-li{
-   
 }
 
 a{
@@ -51,11 +61,12 @@ main{
     padding: 10px;
     margin: auto;
     background-color: white;
+    margin-top: 20px;
 }
 
 h2{
     text-align: center;
-    padding: 20px;
+    padding: 15px;
 }
 
 p{
