--- a/exercícios/ex026/mq005/estilos/style.css
+++ b/exercícios/ex026/mq005/estilos/style.css
@@ -8,6 +8,7 @@
 
 html, body{
     background-color: rgb(166, 248, 248);
+    
 }
 
 header{
@@ -36,11 +37,14 @@ span#burguer:hover{
 menu{
     text-align: center;
     display: none;
-    background-color: darkcyan;
 }
 
 ul{
     list-style-type: none;
+}
+
+menu li{
+    background-color: darkcyan;
 }
 
 a{
@@ -56,7 +60,7 @@ a:hover{
 }
 
 main{
-    width: 90vw;
+    width: 85vw;
     border-radius: 10px;
     padding: 10px;
     margin: auto;
